<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    android:orientation="vertical"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:id="@+id/linear1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#FFC107" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:columnCount="3"
            android:rowCount="2">

            <TextView
                android:id="@+id/textLable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/txt_lable"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/txt_source"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textYield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/txt_yield"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/txt_calories"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/txt_weight"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </GridLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>